@@ -1,3 +1,4 @@
+	* fix torrent-abort issue which would cancel name lookups of other torrents
 	* make torrent file parser reject invalid path elements earlier
 	* fixed piece picker bug when using pad-files
 	* fix read-piece response for cancelled deadline-pieces
